Bug 33634 - VIEWING: No difference between cell border 0,5pt and 1,0pt
Summary: VIEWING: No difference between cell border 0,5pt and 1,0pt
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: Other Windows (All)
: medium minor
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.6.0 target:3.5.5
Keywords:
: 44656 44977 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-01-27 21:53 UTC by Mikeyy - L10n HR
Modified: 2012-06-06 01:52 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Testkit as promised (207.10 KB, application/x-zip-compressed)
2011-02-16 07:25 UTC, Rainer Bielefeld Retired
Details
Original test document (13.50 KB, application/ms-excel)
2011-10-28 01:53 UTC, Mikeyy - L10n HR
Details
Exported PDF from original document (27.73 KB, application/pdf)
2011-10-28 01:54 UTC, Mikeyy - L10n HR
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mikeyy - L10n HR 2011-01-27 21:53:55 UTC
Way to reproduce:
1. Open new spreadsheet document
2. Mark any larger group of cells, for example A1 to H10
3. From toolbar select "Borders" icon and apply last option, all borders (last row, first from RIGHT)
4. Now select one column, for example from D1 to D10
5. Right click on selected and Format Cells
6. Go to Borders tab
7. Select only LEFT or RIGHT border and try to apply 1,0pt border on it, it will not work


I also doesn't make differect between 0,05pt and 0,5pt or 4pt / 5pt etc.
Changes are not applied to preview window and are not applied to cells. Didn't try to print to see if it's applied there.
Comment 1 Rainer Bielefeld Retired 2011-02-16 05:26:36 UTC
More or less reproducible] with "LibreOffice 3.3.1 RC1 – WIN7  Home Premium  (64bit) German UI [OOO330m19 (build 7 / tag 3.3.1.1)]".

I can confirm the observation that often there is no difference visible between different border widths with "normal" zoom, but with zoom 300% (and generally in prints or OPDF export) you will see the difference. Please see results in my test kit:
- sample.ods contains the test table sheet3 
- ScreenshotsWithComments.pdf shows result of different zoom settings for 
  sample.ods
- pdfpage.pdf shows export of complete sheet 3
- pdfselection.pdf shows export result of selection n sheet 3 

I see this as a minor problem, although I sometimes suffer from that lack in difference in view. Editing the spreadsheet everything looks fine (all cells with same border), but PDF export shows lots of unwanted different border widths.
Comment 2 Rainer Bielefeld Retired 2011-02-16 07:25:45 UTC
Created attachment 43433 [details]
Testkit as promised
Comment 3 Mikeyy - L10n HR 2011-08-27 09:24:53 UTC
So, anyone from devs noticed this?
This is still actual in 3.4.2 version. There is no visible difference between different border sizes.
Comment 4 Mikeyy - L10n HR 2011-10-28 01:50:19 UTC
Still happening in 3.4.3

+

LO has big problems with cell borders mechanism.
I was making calc sheet in which I tryed to hide all borders with white color and have borders around cells that are used.

I'm attaching 2 seperate files, 1 original, second PDF export of first file. Just compare them and you will see differences.

1. Outer border, in calc it's not visible at all, but it's visible when exporting or printing.

2. Some cell borders are sharp (normal) and some are blurry (!?!?!?!?).

3. A lot of cell borders are MISSING!!!!!! All cells with text or colored backgrounds should have all 4 borders, some have only 2 borders, some have none, some have all...

WINDOWS XP, LO 3.4.3
Comment 5 Mikeyy - L10n HR 2011-10-28 01:53:36 UTC
Created attachment 52843 [details]
Original test document
Comment 6 Mikeyy - L10n HR 2011-10-28 01:54:54 UTC
Created attachment 52844 [details]
Exported PDF from original document
Comment 7 Rainer Bielefeld Retired 2011-10-28 05:09:13 UTC
@Mikeyy:
I see the effect, but that's a completely different problem. I submitted a new "Bug 42339 - PRINTING shows cell borders different from document view for particular .xls"

Comments 3 and following should be ignored here!
Comment 8 Roberto HR 2011-11-21 07:25:50 UTC
Still happening in 3.4.4 on Windows 7 32-bit SP-1
Comment 9 Björn Michaelsen 2011-12-23 11:45:15 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 10 Mikeyy - L10n HR 2011-12-23 14:01:20 UTC
This bug is easly reproducible in 3.5 beta 1.
LO has some SERIOUS ISSUES with cell borders, at least on windows, but noone took a look at this bug for almost a year now.

That's first thing you notice when you try to do anything with borders.

Also, Bug 42339 that Rainer opened is probably way to solution for this bug also, or at least step in right direction.
Comment 11 Milos Sramek 2012-02-17 02:44:59 UTC
+1 for this bug, I confirm in 3.5.0rc3 on Linux. Simultaneously, I propose to change its category it to CRITICAL. We are in the process of moving to LO from MSO and owing to this bug the process may fail. Our users hate it!

I think that the whole concept of line thickness measured in absolute units is flawed. A user does not care about the thickness of lines in pt, mm, inches or whichever - they want thin, medium, thick and very thick lines (or maybe more steps) in each magnification. If they want a thicker line, they should get a thicker line, not a 2pt line, which appears at the given zoom the same as a 1pt line.  With variable scaling this does not make sense anyway and is therefore totally nonintuitive. I propose this change in all LO tools.
Comment 12 Markus Mohrhard 2012-04-01 17:34:27 UTC
Please stop spamming this bug report.

As long as a dev or QA person did not change the status it is likely that it is not yet fixed. It is annoying and not helpful for developers to search through several unhelpful comments to find the important information.

And if you think we are fixing this not fast enough then please start yourself. I can give some code pointers or you can help with one of the other 650 open calc bugs.

And no this bug is not a candidate for critical. This is a pure UI problem and maybe there is even a reason for this behavior. One would need to check in the code why this is happening and why changing the zoom facot changes the UI behavior.
Comment 13 Markus Mohrhard 2012-04-02 10:53:15 UTC
*** Bug 44977 has been marked as a duplicate of this bug. ***
Comment 14 Markus Mohrhard 2012-04-02 18:40:54 UTC
*** Bug 44656 has been marked as a duplicate of this bug. ***
Comment 15 Markus Mohrhard 2012-04-03 17:52:23 UTC
I have finally a fix for this issue that will not make it into 3.5! If you wanna help grab one of the next daily master builds and check all kind of features around borders: Displaying in different zoom modes, printing, export to pdf, and everything that I missed right now.

This patch will most likely break several things in different areas and feedback highly appreciated. It should be a step in the right direction but this is like a big black hole affecting every part of LibO.
Comment 16 Not Assigned 2012-04-03 18:15:50 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2c91cb08d65cd35fa8ef6eaca3677aa82fb58cbe

better drawing support for borders of different width, fdo#33634
Comment 17 Milos Sramek 2012-04-12 14:53:37 UTC
I tested rendering of lines it in the recent daily build - it is OK now, I did not notice any problem with that. Thanks.

However, I in general find setting of line thickness to be too cumbersome. See https://bugs.freedesktop.org/show_bug.cgi?id=48622
Milos
Comment 18 Michael Stahl 2012-05-22 13:17:19 UTC
just for the record, the commit in comment #16 introduced bug 49438.
Comment 19 Not Assigned 2012-06-06 01:52:02 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=790cc0cc928f1c04bace552a813a5dbf0a8b3424&g=libreoffice-3-5

better drawing support for borders of different width, fdo#33634


It will be available in LibreOffice 3.5.5.