better drawing support for borders of different width, fdo#33634

Signed-off-by: Miklos Vajna <vmiklos@suse.cz>